# vidi

./: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/agents/: implementer.md  planner.md  verifier.md
.claude/rules/: execution.md  planning.md  rust.md  security.md  verification.md
.github/workflows/: agent-merge.yml  agent-plan.yml  agent-run.yml  agent-verify.yml  ci.yml  deploy.yml
examples/: advance2d.rs  ai_loss_landscape.rs  live_forecast.rs  simple.rs  tier1.rs
scripts/: deploy.sh
src/: core.rs  dash.rs  lib.rs  runtime.rs  wasm_api.rs
src/foo/: common.rs  mod.rs  plot2d.rs  plot3d.rs  render.rs  utils.rs  web.rs
src/foo/render/: cameras.rs  draw2d.rs  draw3d.rs  gestures.rs  layout.rs  mesh.rs  mod.rs  resources.rs  specs.rs
src/foo/render_gpt1/: camera.rs  draw.rs  input.rs  layout.rs  mod.rs  tile.rs
src/foo/src_old/: main.rs  plot.rs  render.rs
src/render/: components.rs  draw.rs  mod.rs  resources.rs  systems.rs
src/render/draw/: charts_2d.rs  charts_3d.rs  common.rs  distribution.rs  financial.rs  heatmap.rs  mod.rs  radial.rs
vidi-server/: .gitignore  Cargo.toml
vidi-server/dashboard-template/: Cargo.toml  build.rs
vidi-server/dashboard-template/src/: lib.rs
vidi-server/migrations/: 001_initial.sql
vidi-server/scripts/: build-wasm.sh
vidi-server/src/: config.rs  error.rs  lifecycle.rs  main.rs  wasm_compiler.rs
vidi-server/src/api/: dashboard.rs  mod.rs  portal.rs  stream.rs
vidi-server/src/models/: dashboard.rs  messages.rs  mod.rs
vidi-server/src/storage/: memory.rs  mod.rs  sqlite.rs
vidi-server/static/: dashboard.html  dashboard.js  portal.html  portal.js  retro.css  storage.js
vidi-server/static/examples/: 3d-visualization.json  distributions.json  financial.json  graph-examples.json  heatmaps.json  radial.json
web/: dash.js  index.html
