[package]
name = "vidi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
bevy = "0.17.3"
bevy_asset = "0.17.3"
bevy_math = "0.17.3"
bevy_mesh = "0.17.3"
bevy_prototype_lyon = "0.15.0"
error-stack = "0.6.0"
lyon_tessellation = "1.0.16"
parking_lot = "0.12"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu-types = "28.0.0"
glam = "0.30.9"
bevy_camera = "0.17.3"
bevy_render = "0.17.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true


# #!/bin/bash
# # build.sh

# # Build for WASM
# echo "Building for WASM..."
# cargo build --release --target wasm32-unknown-unknown

# # Generate JS bindings
# echo "Generating JS bindings..."
# wasm-bindgen target/wasm32-unknown-unknown/release/dash.wasm \
#   --target web \
#   --out-dir www/static \
#   --no-typescript

# # Optimize
# echo "Optimizing WASM..."
# wasm-opt -Oz -o www/static/dash_opt.wasm www/static/dash_bg.wasm
# mv www/static/dash_opt.wasm www/static/dash_bg.wasm

# echo "Build complete!"