[workspace]
members = [".", "vidi-server", "vidi-server/dashboard-template"]
resolver = "3"

[package]
name = "vidi-charts"
version = "0.1.1"
edition = "2024"
description = "High-performance data visualization library for Rust, powered by Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexlatif/vidi"
homepage = "https://github.com/alexlatif/vidi"
documentation = "https://docs.rs/vidi-charts"
readme = "README.md"
keywords = ["visualization", "plotting", "charts", "bevy", "wasm"]
categories = ["visualization", "graphics", "game-development", "wasm"]
rust-version = "1.85"
authors = ["e0 <abe@abraham.com>"]
exclude = [
    "Dockerfile",
    "docker-compose*.yml",
    "Caddyfile",
    "scripts/",
    ".github/",
    ".claude/",
    "Justfile",
    ".dockerignore",
    "CLAUDE.md",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.17.3"
bevy_asset = "0.17.3"
bevy_math = "0.17.3"
bevy_mesh = "0.17.3"
bevy_prototype_lyon = "0.15.0"
error-stack = "0.6.0"
lyon_tessellation = "1.0.16"
parking_lot = "0.12"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu-types = "28.0.0"
glam = "0.30.9"
bevy_camera = "0.17.3"
bevy_render = "0.17.3"

# HTTP client for web dashboard (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3.0", features = ["json"] }
open = "5.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
